{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 52,
  "lineage": "b23a7b7a-d00b-c8e1-822c-162712754970",
  "resources": [
    {
      "module": "module.vm_windows",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/networkInterfaces/vm-windows-dev-nic",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "172.16.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/publicIPAddresses/vm-windows-dev-pip",
                "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/virtualNetworks/vnet-aoai-dev/subnets/subnet-jumpbox"
              }
            ],
            "location": "japaneast",
            "mac_address": "00-22-48-E6-9B-E9",
            "name": "vm-windows-dev-nic",
            "private_ip_address": "172.16.0.4",
            "private_ip_addresses": [
              "172.16.0.4"
            ],
            "resource_group_name": "rg-aoai-dev"
          },
          "dependencies": [
            "azurerm_resource_group.aoai",
            "module.vm_windows.azurerm_public_ip.windows",
            "module.vnet.azurerm_subnet.jumpbox",
            "module.vnet.azurerm_virtual_network.workload"
          ]
        }
      ]
    },
    {
      "module": "module.vm_windows",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/publicIPAddresses/vm-windows-dev-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.18.8.31",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "vm-windows-dev-pip",
            "resource_group_name": "rg-aoai-dev",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.aoai"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-jumpbox",
            "location": "japaneast",
            "name": "nsg-jumpbox",
            "resource_group_name": "rg-aoai-dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-rdp",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "60.121.130.230",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.aoai"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-pe",
            "location": "japaneast",
            "name": "nsg-pe",
            "resource_group_name": "rg-aoai-dev",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.aoai"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jumpbox_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-jumpbox/securityRules/allow-rdp",
            "name": "allow-rdp",
            "network_security_group_name": "nsg-jumpbox",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-aoai-dev",
            "source_address_prefix": "60.121.130.230",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.aoai",
            "module.vnet.azurerm_network_security_group.jumpbox"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/virtualNetworks/vnet-aoai-dev/subnets/subnet-jumpbox",
            "name": "subnet-jumpbox",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-aoai-dev",
            "virtual_network_name": "vnet-aoai-dev"
          },
          "dependencies": [
            "azurerm_resource_group.aoai",
            "module.vnet.azurerm_virtual_network.workload"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/virtualNetworks/vnet-aoai-dev/subnets/subnet-pe",
            "name": "subnet-pe",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-aoai-dev",
            "virtual_network_name": "vnet-aoai-dev"
          },
          "dependencies": [
            "azurerm_resource_group.aoai",
            "module.vnet.azurerm_virtual_network.workload"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/virtualNetworks/vnet-aoai-dev/subnets/subnet-jumpbox",
            "network_security_group_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-jumpbox",
            "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/virtualNetworks/vnet-aoai-dev/subnets/subnet-jumpbox"
          },
          "dependencies": [
            "azurerm_resource_group.aoai",
            "module.vnet.azurerm_network_security_group.jumpbox",
            "module.vnet.azurerm_subnet.jumpbox",
            "module.vnet.azurerm_virtual_network.workload"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "pe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/virtualNetworks/vnet-aoai-dev/subnets/subnet-pe",
            "network_security_group_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-pe",
            "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/virtualNetworks/vnet-aoai-dev/subnets/subnet-pe"
          },
          "dependencies": [
            "azurerm_resource_group.aoai",
            "module.vnet.azurerm_network_security_group.pe",
            "module.vnet.azurerm_subnet.pe",
            "module.vnet.azurerm_virtual_network.workload"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "11b4d034-a05b-4b25-bb86-316257ad531b",
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/virtualNetworks/vnet-aoai-dev",
            "location": "japaneast",
            "name": "vnet-aoai-dev",
            "resource_group_name": "rg-aoai-dev",
            "subnet": [
              {
                "address_prefix": "172.16.0.0/24",
                "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/virtualNetworks/vnet-aoai-dev/subnets/subnet-jumpbox",
                "name": "subnet-jumpbox",
                "security_group": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-jumpbox"
              },
              {
                "address_prefix": "172.16.1.0/24",
                "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/virtualNetworks/vnet-aoai-dev/subnets/subnet-pe",
                "name": "subnet-pe",
                "security_group": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/rg-aoai-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-pe"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.aoai"
          ]
        }
      ]
    }
  ]
}